--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,78 @@
-name: Build iOS Live Stream
+name: Build
 
 on: [push]
 
 jobs:
-  build-lib:
-    runs-on: macos-latest
+  build-swift:
+    name: Build with swift
+    runs-on: macos-12
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Build
-        run: |
-          pod install
-          xcodebuild clean build -workspace ApiVideoLiveStream.xcworkspace -scheme ApiVideoLiveStream -sdk iphoneos
-  build-example:
-    runs-on: macos-latest
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: xcode version
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '13.4.1'
+      - name: Build Package with swift
+        run: swift build
+
+  build-xcodebuild:
+    name: Build with xcodebuild
+    runs-on: macos-12
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Build
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: xcode version
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '13.4.1'
+      - name: Set Default Scheme
         run: |
-          pod install
-          xcodebuild clean build -workspace ApiVideoLiveStream.xcworkspace -scheme ApiVideoLiveStream -sdk iphoneos
+          scheme_list=$(xcodebuild -list -json | tr -d "\n")
+          default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['workspace']['schemes'][0]")
+          echo $default | cat >default
+          echo Using default scheme: $default
+      - name: Build Package with xcodebuild
+        env:
+          scheme: ${{ 'default' }}
+        run: |
+          if [ $scheme = default ]; then scheme=$(cat default); fi
+          xcodebuild -scheme $scheme  -destination 'platform=iOS Simulator,name=iPhone 13'
+      - name: Build Example
+        env:
+          scheme: ${{ 'default' }}
+        run: |
+          if [ $scheme = default ]; then scheme=$(cat default); fi
+          xcodebuild clean build -project Examples/ExampleUIKit/ExampleUIKit.xcodeproj -scheme $scheme -sdk iphoneos
+
+  verify_cocoapods:
+    name: Verify cocoapods podspec
+    needs: [ build-xcodebuild, build-swift]
+    runs-on: macos-12
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: xcode version
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '13.4.1'
+      - name: Verify cocoapods
+        run: pod lib lint --allow-warnings
+
+  lint:
+    name: Running swiftlint
+    needs: verify_cocoapods
+    runs-on: macos-12
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: xcode version
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '13.4.1'
+      - name: Run swiftlint
+        run: swiftlint
