--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build-swift:
     name: Build with swift
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
@@ -13,13 +13,13 @@ jobs:
       - name: xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '13.4.1'
+          xcode-version: latest-stable
       - name: Build Package with swift
         run: swift build
 
   build-xcodebuild:
     name: Build with xcodebuild
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
@@ -27,7 +27,7 @@ jobs:
       - name: xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '13.4.1'
+          xcode-version: latest-stable
       - name: Set Default Scheme
         run: |
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
@@ -50,7 +50,7 @@ jobs:
   verify_cocoapods:
     name: Verify cocoapods podspec
     needs: [ build-xcodebuild, build-swift]
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
@@ -58,14 +58,14 @@ jobs:
       - name: xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '13.4.1'
+          xcode-version: latest-stable
       - name: Verify cocoapods
         run: pod lib lint --allow-warnings
 
   lint:
     name: Running swiftlint
     needs: verify_cocoapods
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
@@ -73,6 +73,6 @@ jobs:
       - name: xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '13.4.1'
+          xcode-version: latest-stable
       - name: Run swiftlint
         run: swiftlint
