--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,15 +6,10 @@ jobs:
   deploy:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-      
+      - uses: actions/checkout@v3
       - name: Install Cocoapods
         run: gem install cocoapods
-
       - name: Deploy to Cocoapods
-        run: |
-          set -eo pipefail
-          pod lib lint --allow-warnings
-          pod trunk push --allow-warnings
+        run: pod trunk push --allow-warnings
         env:
           COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
