refactor(*): create a global pbxproj

--- a/Examples/iOS/Info.plist
+++ b/Examples/iOS/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Your own description of the purpose</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Your own description of the purpose</string>
 </dict>
 </plist>
