--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,12 +4,14 @@ on:
     types: [published]
 jobs:
   deploy:
-    runs-on: macos-14
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
       - name: Install Cocoapods
         run: gem install cocoapods
       - name: Deploy to Cocoapods
-        run: pod trunk push --allow-warnings
+        run: |
+          xcodebuild -downloadPlatform iOS
+          pod trunk push --allow-warnings
         env:
           COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
